--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     "react": "https://esm.sh/react@19.0.0",
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "framer-motion": "https://esm.sh/framer-motion@11.11.17",
+    "framer-motion": "https://esm.sh/framer-motion@12.0.0",
     "lucide-react": "https://esm.sh/lucide-react@0.460.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
@@ -77,7 +77,7 @@
 </head>
 <body>
     <div id="root"></div>
-    <!-- 引入主入口文件 -->
+    <!-- 主入口 -->
     <script type="module" src="./index.tsx"></script>
 </body>
 </html>
