feat: Update dependencies and optimize ESM loading
Updates React and related dependencies to their latest stable versions.
Configures Vite to use import maps for efficient ESM loading, improving startup performance.
Adds more robust error handling and logging for application initialization.
Removes unnecessary `optimizeDeps.exclude` configuration as it's handled by externalization.

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     "react": "https://esm.sh/react@19.0.0",
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "framer-motion": "https://esm.sh/framer-motion@12.0.0",
-    "lucide-react": "https://esm.sh/lucide-react@0.460.0",
+    "framer-motion": "https://esm.sh/framer-motion@11.11.17?external=react,react-dom",
+    "lucide-react": "https://esm.sh/lucide-react@0.460.0?external=react,react-dom",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
     "vite": "https://esm.sh/vite@^7.3.0"
@@ -77,7 +77,7 @@
 </head>
 <body>
     <div id="root"></div>
-    <!-- 主入口 -->
+    <!-- 使用 type="module" 确保加载顺序 -->
     <script type="module" src="./index.tsx"></script>
 </body>
 </html>
